--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,23 @@
 name = "hydra-config"
 version = "0.0.0"
 description = "Example code for managing structured, strongly-typed configuration in Hydra projects"
+requires-python = ">=3.10"
+readme = "README.md"
+license = {text = "MIT"}
 authors = [
     {name = "Robert Fink", email = "robert.fink@helsing.ai"},
 ]
+
 dependencies = [
     "hydra-core>=1.3.2",
     "databind>=4.4.0",
 ]
-requires-python = ">=3.10"
-readme = "README.md"
-license = {text = "MIT"}
 
+[tool.pdm.dev-dependencies]
+test = [
+    "pytest>=7.4.0",
+]
+dev = [
+    "mypy>=1.4.1",
+    "black>=23.7.0",
+]
