--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 description = "Example code for managing structured, strongly-typed configuration in Hydra projects"
 requires-python = ">=3.10"
 readme = "README.md"
-license = {text = "MIT"}
+license = {text = "Apache-2.0"}
 authors = [
     {name = "Robert Fink", email = "robert.fink@helsing.ai"},
 ]
@@ -21,4 +21,9 @@ test = [
 dev = [
     "mypy>=1.4.1",
     "black>=23.7.0",
+    "isort>=5.12.0",
+    "ruff>=0.0.280",
 ]
+
+[tool.isort]
+profile = "black"
